include/tacuda.h

typedef enum ctStatus {
  CT_STATUS_SUCCESS = 0,
  CT_STATUS_ALLOC_FAILED = 1,
  CT_STATUS_COPY_FAILED = 2,
  CT_STATUS_KERNEL_FAILED = 3,
} ctStatus_t;
CTAPI_EXPORT ctStatus_t ct_bbands(const float *host_input, float *host_upper,
                                  float *host_middle, float *host_lower,
                                  int size, int period, float upperMul,
                                  float lowerMul);
CTAPI_EXPORT ctStatus_t ct_atr(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period, float initial);
CTAPI_EXPORT ctStatus_t ct_natr(const float *host_high, const float *host_low,
                                const float *host_close, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_trange(const float *host_high, const float *host_low,
                                  const float *host_close, float *host_output,
                                  int size);
CTAPI_EXPORT ctStatus_t ct_stochastic(const float *host_high,
                                      const float *host_low,
                                      const float *host_close, float *host_k,
                                      float *host_d, int size, int kPeriod,
                                      int dPeriod);
CTAPI_EXPORT ctStatus_t ct_stochf(const float *host_high, const float *host_low,
                                  const float *host_close, float *host_k,
                                  float *host_d, int size, int kPeriod,
                                  int dPeriod);
CTAPI_EXPORT ctStatus_t ct_stochrsi(const float *host_input, float *host_k,
                                    float *host_d, int size, int rsiPeriod,
                                    int kPeriod, int dPeriod);
CTAPI_EXPORT ctStatus_t ct_cci(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_adx(const float *host_high, const float *host_low,
                               const float *host_close, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_adxr(const float *host_high, const float *host_low,
                                const float *host_close, float *host_output,
                                int size, int period);
CTAPI_EXPORT ctStatus_t ct_plus_dm(const float *host_high,
                                   const float *host_low, float *host_output,
                                   int size, int period);
CTAPI_EXPORT ctStatus_t ct_minus_dm(const float *host_high,
                                    const float *host_low, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_plus_di(const float *host_high,
                                   const float *host_low,
                                   const float *host_close, float *host_output,
                                   int size, int period);
CTAPI_EXPORT ctStatus_t ct_minus_di(const float *host_high,
                                    const float *host_low,
                                    const float *host_close, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_mfi(const float *host_high, const float *host_low,
                               const float *host_close,
                               const float *host_volume, float *host_output,
                               int size, int period);
CTAPI_EXPORT ctStatus_t ct_obv(const float *host_price,
                               const float *host_volume, float *host_output,
                               int size);
CTAPI_EXPORT ctStatus_t ct_sar(const float *host_high, const float *host_low,
                               float *host_output, int size, float step,
                               float maxAcceleration);
CTAPI_EXPORT ctStatus_t ct_sarext(const float *host_high, const float *host_low,
                                  float *host_output, int size,
                                  float startValue, float offsetOnReverse,
                                  float accInitLong, float accLong,
                                  float accMaxLong, float accInitShort,
                                  float accShort, float accMaxShort);
CTAPI_EXPORT ctStatus_t ct_aroon(const float *host_high, const float *host_low,
                                 float *host_up, float *host_down,
                                 float *host_osc, int size, int upPeriod,
                                 int downPeriod);
CTAPI_EXPORT ctStatus_t ct_aroonosc(const float *host_high,
                                    const float *host_low, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_adosc(const float *host_high, const float *host_low,
                                 const float *host_close,
                                 const float *host_volume, float *host_output,
                                 int size, int shortPeriod, int longPeriod);
CTAPI_EXPORT ctStatus_t ct_ultosc(const float *host_high, const float *host_low,
                                  const float *host_close, float *host_output,
                                  int size, int shortPeriod, int mediumPeriod,
                                  int longPeriod);
CTAPI_EXPORT ctStatus_t ct_ad(const float *host_high, const float *host_low,
                              const float *host_close, const float *host_volume,
                              float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_avgprice(const float *host_open,
                                    const float *host_high,
                                    const float *host_low,
                                    const float *host_close, float *host_output,
                                    int size);
CTAPI_EXPORT ctStatus_t ct_medprice(const float *host_high,
                                    const float *host_low, float *host_output,
                                    int size);
CTAPI_EXPORT ctStatus_t ct_typprice(const float *host_high,
                                    const float *host_low,
                                    const float *host_close, float *host_output,
                                    int size);
CTAPI_EXPORT ctStatus_t ct_wclprice(const float *host_high,
                                    const float *host_low,
                                    const float *host_close, float *host_output,
                                    int size);
CTAPI_EXPORT ctStatus_t ct_willr(const float *host_high, const float *host_low,
                                 const float *host_close, float *host_output,
                                 int size, int period);
CTAPI_EXPORT ctStatus_t ct_midpoint(const float *host_input, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_midprice(const float *host_high,
                                    const float *host_low, float *host_output,
                                    int size, int period);
CTAPI_EXPORT ctStatus_t ct_beta(const float *host_x, const float *host_y,
                                float *host_output, int size, int period);
CTAPI_EXPORT ctStatus_t ct_bop(const float *host_open, const float *host_high,
                               const float *host_low, const float *host_close,
                               float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_doji(const float *host_open,
                                    const float *host_high,
                                    const float *host_low,
                                    const float *host_close, float *host_output,
                                    int size);
CTAPI_EXPORT ctStatus_t ct_cdl_hammer(const float *host_open,
                                      const float *host_high,
                                      const float *host_low,
                                      const float *host_close,
                                      float *host_output, int size);
CTAPI_EXPORT ctStatus_t ct_cdl_inverted_hammer(const float *host_open,
                                               const float *host_high,
                                               const float *host_low,
                                               const float *host_close,
                                               float *host_output, int size);