bindings/csharp/Tacuda.Generated.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minindex_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_stddev_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_var_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sum_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_rsi_device(float[] device_input, float[] device_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_kama_device(float[] device_input, float[] device_output, int size, int period, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_macd_line_device(float[] device_input, float[] device_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_apo_device(float[] device_input, float[] device_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ppo_device(float[] device_input, float[] device_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_pvo_device(float[] device_volume, float[] device_output, int size, int fastPeriod, int slowPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_accbands(float[] host_high, float[] host_low, float[] host_close, float[] host_upper, float[] host_middle, float[] host_lower, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_bbands(float[] host_input, float[] host_upper, float[] host_middle, float[] host_lower, int size, int period, float upperMul, float lowerMul, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_atr(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, float initial, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_natr(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_trange(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_stochastic(float[] host_high, float[] host_low, float[] host_close, float[] host_k, float[] host_d, int size, int kPeriod, int dPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_stochf(float[] host_high, float[] host_low, float[] host_close, float[] host_k, float[] host_d, int size, int kPeriod, int dPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_stochrsi(float[] host_input, float[] host_k, float[] host_d, int size, int rsiPeriod, int kPeriod, int dPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cci(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_adx(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_adxr(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_plus_dm(float[] host_high, float[] host_low, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minus_dm(float[] host_high, float[] host_low, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_plus_di(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_minus_di(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_mfi(float[] host_high, float[] host_low, float[] host_close, float[] host_volume, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_imi(float[] host_open, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_obv(float[] host_price, float[] host_volume, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_nvi(float[] host_close, float[] host_volume, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_pvi(float[] host_close, float[] host_volume, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sar(float[] host_high, float[] host_low, float[] host_output, int size, float step, float maxAcceleration, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_sarext(float[] host_high, float[] host_low, float[] host_output, int size, float startValue, float offsetOnReverse, float accInitLong, float accLong, float accMaxLong, float accInitShort, float accShort, float accMaxShort, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_aroon(float[] host_high, float[] host_low, float[] host_up, float[] host_down, float[] host_osc, int size, int upPeriod, int downPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_aroonosc(float[] host_high, float[] host_low, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_adosc(float[] host_high, float[] host_low, float[] host_close, float[] host_volume, float[] host_output, int size, int shortPeriod, int longPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ultosc(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int shortPeriod, int mediumPeriod, int longPeriod, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_ad(float[] host_high, float[] host_low, float[] host_close, float[] host_volume, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_avgprice(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_medprice(float[] host_high, float[] host_low, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_typprice(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_wclprice(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_willr(float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_midpoint(float[] host_input, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_midprice(float[] host_high, float[] host_low, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_beta(float[] host_x, float[] host_y, float[] host_output, int size, int period, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_bop(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_doji(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_hammer(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int ct_cdl_inverted_hammer(float[] host_open, float[] host_high, float[] host_low, float[] host_close, float[] host_output, int size, IntPtr stream = default);
